fixed text wrap on posts

--- a/assets/css/posts_stylesheet.css
+++ b/assets/css/posts_stylesheet.css
@@ -14,7 +14,8 @@
     border-radius: 40px;
     margin: 1%;
     margin-left: 3%;
-    
+    margin-top: 20px;
+    margin-bottom: 20px;
     border: 1px solid #77aaff;
     box-shadow: -1px 1px #77aaff,
       -2px 2px #77aaff,
@@ -25,6 +26,7 @@
   
   .card-title {
     width: 100%;
+    word-break: break-all;
     display: flex;
     font-size: 20px;
     color: black;
@@ -37,6 +39,7 @@
   
   .card-content {
     width: 100%;
+    word-break: break-all; 
     text-align: left;
     padding: 5px;
     color: black;
@@ -71,7 +74,8 @@
   .votes {
     float: left;
     text-align: center;
-    width: 100px;
+    padding-left: 10px;
+    width: 40px;
     height: 100%;
   }
   
